--- a/templates/gui/partials/base.html.twig
+++ b/templates/gui/partials/base.html.twig
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="{{ asset('assets/vendors/fontawesome/all.min.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/vendors/simplebar/simplebar.min.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/css/theme.css') }}" rel="stylesheet" id="style-default">
         <link href="{{ asset('assets/css/user.css') }}" rel="stylesheet" id="user-style-default">
@@ -35,7 +35,7 @@
         <script src="{{ asset('assets/vendors/bootstrap/bootstrap.min.js') }}"></script>
         <script src="{{ asset('assets/vendors/anchorjs/anchor.min.js') }}"></script>
         <script src="{{ asset('assets/vendors/is/is.min.js') }}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{{ asset('assets/vendors/fontawesome/all.min.js') }}"></script>
         <script src="{{ asset('assets/vendors/lodash/lodash.min.js') }}"></script>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
         <script src="{{ asset('assets/vendors/list.js/list.min.js') }}"></script>
