fix: don't update file for update notifications update: add css files in projects without link for the web

--- a/templates/gui/partials/base.html.twig
+++ b/templates/gui/partials/base.html.twig
@@ -9,9 +9,9 @@
         <meta name="theme-color" content="#ffffff">
         <script src="{{ asset('assets/js/config.js') }}"></script>
         <script src="{{ asset('assets/vendors/simplebar/simplebar.min.js') }}"></script>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+{#        <link rel="preconnect" href="https://fonts.gstatic.com">#}
+        <link href="{{ asset('assets/css/googleFamilyPoppins.css') }}" rel="stylesheet">
+        <link href="{{ asset('assets/vendors/bootstrap/bootstrap-icons.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/vendors/fontawesome/all.min.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/vendors/simplebar/simplebar.min.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/css/theme.css') }}" rel="stylesheet" id="style-default">
