--- a/templates/notification/show.html.twig
+++ b/templates/notification/show.html.twig
@@ -17,7 +17,7 @@
                 <span class="bg-200 dark__bg-1100 pe-3">Notifications</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet de voir toutes notifications.</p>
+            <p class="mb-0">Cette page vous permet de voir toutes les notifications.</p>
         </div>
     </div>
     <div class="row g-0">
