--- a/templates/gui/partials/base.html.twig
+++ b/templates/gui/partials/base.html.twig
@@ -9,13 +9,14 @@
         <meta name="theme-color" content="#ffffff">
         <script src="{{ asset('assets/js/config.js') }}"></script>
         <script src="{{ asset('assets/vendors/simplebar/simplebar.min.js') }}"></script>
-{#        <link rel="preconnect" href="https://fonts.gstatic.com">#}
         <link href="{{ asset('assets/css/googleFamilyPoppins.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/vendors/bootstrap/bootstrap-icons.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/vendors/fontawesome/all.min.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/vendors/simplebar/simplebar.min.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/css/theme.css') }}" rel="stylesheet" id="style-default">
         <link href="{{ asset('assets/css/user.css') }}" rel="stylesheet" id="user-style-default">
+{#        <link href="{{ asset('assets/vendors/toastr/toastr.css') }}" rel="stylesheet">#}
+        <link href="{{ asset('assets/vendors/toastr/toastr.min.css') }}" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -40,6 +41,29 @@
         <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
         <script src="{{ asset('assets/vendors/list.js/list.min.js') }}"></script>
         <script src="{{ asset('assets/js/theme.js') }}"></script>
+        <script src="{{ asset('assets/vendors/toastr/toastr.min.js') }}"></script>
+        <script type="text/javascript">
+            document.addEventListener("DOMContentLoaded", function() {
+                // Initialisation de Toastr
+                toastr.options = {
+                    "closeButton": true,
+                    "debug": false,
+                    "newestOnTop": false,
+                    "progressBar": true,
+                    "positionClass": "toast-top-center",
+                    "preventDuplicates": true,
+                    "onclick": null,
+                    "showDuration": "100",
+                    "hideDuration": "1000",
+                    "timeOut": "5000",
+                    "extendedTimeOut": "5000",
+                    "showEasing": "swing",
+                    "hideEasing": "linear",
+                    "showMethod": "fadeIn",
+                    "hideMethod": "fadeOut"
+                };
+            });
+        </script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
