--- a/templates/notification/show.html.twig
+++ b/templates/notification/show.html.twig
@@ -22,12 +22,12 @@
     </div>
     <div class="row g-0">
         <div class="col-lg-12 ps-lg-2">
-            {% for message in app.flashes('success') %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>Parfait :</strong> {{ message }}
-                    <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            {% endfor %}
+{#            {% for message in app.flashes('success') %}#}
+{#                <div class="alert alert-success alert-dismissible fade show" role="alert">#}
+{#                    <strong>Parfait :</strong> {{ message }}#}
+{#                    <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>#}
+{#                </div>#}
+{#            {% endfor %}#}
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex justify-content-between align-items-center">
@@ -70,5 +70,15 @@
 {% endblock %}
 
 {% block javascripts %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            {% for message in app.flashes('success') %}
+            toastr.success("{{ message }}", "Parfait :");
+            {% endfor %}
 
+            {% for message in app.flashes('danger') %}
+            toastr.error("{{ message }}", "Erreur :");
+            {% endfor %}
+        });
+    </script>
 {% endblock %}
