--- a/templates/gui/partials/base.html.twig
+++ b/templates/gui/partials/base.html.twig
@@ -38,7 +38,7 @@
         <script src="{{ asset('assets/vendors/is/is.min.js') }}"></script>
         <script src="{{ asset('assets/vendors/fontawesome/all.min.js') }}"></script>
         <script src="{{ asset('assets/vendors/lodash/lodash.min.js') }}"></script>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
+{#        <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>#}
         <script src="{{ asset('assets/vendors/list.js/list.min.js') }}"></script>
         <script src="{{ asset('assets/js/theme.js') }}"></script>
         <script src="{{ asset('assets/vendors/toastr/toastr.min.js') }}"></script>
